2004-04-27  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.4 released.
	Added elements for frame.  
	Added more entries in examples/app-servers.samples.
	
	
2004-04-26  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm (a/cont, form/cont):
	modified for @ and @@

	* src/kahua/server.scm:
	added frame/cont (source code by Kenji Hisazumi)
	
	* src/kahua/elem.scm:
	added frameset:, frame:, frame/cont:, frameset/, frame/, and
	frame/cont/

2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.3.1 released
	Fix bug in test/Makefile.in

2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.3 released
	Several modifications in testing part.

2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* test/admin.scm.in, shell.scm.in,
	  test/spvr.scm.in, test/usermode.scm.in:
	modified socket check rootine (because there are systems
	return 'fifo (instead of 'socket) for unix domain socket).
	
2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* test/shell.scm.in, test/usermode.scm.in:
	use 'env -i' instead of 'env -u' (because BSD's env does not support
	-u option).
	
2004-04-09  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.2 released.
	
2004-04-09  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in: change content-type charset value to euc-jp
	with Gauche made by --enable-multibyte=no.
	
2004-04-07  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in: adjusted content-type header's charset value to
	(gauche-character-encoding).

	* configure.ac: added test/Makefile to AC_OUTPUT
	
	* examples/Makefile.in: modified to make souce code encoding of
	kahua applications same as the one of gauche internal ces.
	* examples/lambdabooks.init: removed
	* examples/lambdabooks.init.in: added
	* examples/*/*.kahua: removed
	* examples/*/*.kahua.in: added

	* src/Makefile.in:  modified to make souce code encoding of
	src/kahua/typeset.scm same as the one of gauche internal ces.
	* src/kahua/typeset.scm: removed